    - "typos" removed, has been applied upstream
  * debian/control:
    - Added "ttf-dejavu | ttf-bitstream-vera" recommendation to librrd2 -
      upstream no longer ships DejaVuSansMono-Roman.ttf.
  * debian/librrd2.symbols:
    - Updated to the symbols provided by 1.3rc4 - none of the removed symbols
      is supposed to be used outside of rrdtool.

 -- Sebastian Harl <sh@tokkee.org>  Sun, 18 May 2008 22:07:23 +0200

rrdtool (1.2.27-3) UNRELEASED; urgency=low

  * debian/rules:
    - Adding an option to point configure to the right path to tcl. This is
      not needed for Lenny, but we also add it here to make coming backports
      more simple.
  * debian/patches/implicit-decl-fix:
    - Patching the implicit declaration in rrd_update.c in a nicer way.

 -- Bernd Zeimetz <bzed@debian.org>  Sun, 20 Apr 2008 02:09:20 +0200

rrdtool (1.2.27-2) unstable; urgency=low

  * Renamed global definition of LDFLAGS to LINKER_FLAGS in debian/rules to
    work around a broken behavior of dpkg which would use those flags
    unconditionally whenever invoking the linker, which is not wanted e.g.
    when compiling the python bindings (Closes: #476022).
  * Actually pass the linker flags to configure.

 -- Sebastian Harl <sh@tokkee.org>  Wed, 16 Apr 2008 15:50:54 +0200

rrdtool (1.2.27-1) unstable; urgency=low

  [ Bernd Zeimetz ]
  * New upstream release.
    - Finally allows + as leading characters in the input (Closes: #283935).
  * debian/rules, debian/librrd2.install:
    - Install rrdtool's ttf and configure rrd to use it.
  * debian/patches:
    - Updating patches to apply on 1.2.27.
    - Adding debian/patches/bts428778-floating-point-exception to fix a corner
      case that produces a SIGFPE (Closes: #428778). Patch created by
      David Martínez Moreno.
  * debian/control:
    - Removing the ttf-dejavu dependency from librrd2 (Closes: #390617).
    - Builds with -O2 segfault on arm, so disable it on arm for now until the