@@ -11,8 +11,10 @@ rrdtool (1.3~rc4-1) experimental; urgency=low
   * debian/librrd2.symbols:
     - Updated to the symbols provided by 1.3rc4 - none of the removed symbols
       is supposed to be used outside of rrdtool.
+  * debian/rules:
+    - Install "NEWS" and "CHANGES" into all packages.
 
- -- Sebastian Harl <sh@tokkee.org>  Sun, 18 May 2008 22:07:23 +0200
+ -- Sebastian Harl <sh@tokkee.org>  Tue, 20 May 2008 22:04:56 +0200
 
 rrdtool (1.2.27-3) UNRELEASED; urgency=low
 
